GET execution
